# world-encoder

./: .gitignore  AGENTS.md  DATA.md  EXPERIMENTS.md  HANDOFF.md  N1_ROBOCASA.md  PHASE1_EXPLAINED.md  PITCH.md  PLAN.md  README.md  STATUS_AND_ROADMAP.md  STORY.md  TEMPORAL_ARCH.md  TEMPORAL_JOURNAL.md  arch.md  phase1-data-loading.md  phase1.md  pyproject.toml  requirements.txt  run_ablations.sh  run_matrix.sh  run_precompute.sh  run_stage2_cfg34.sh
blog/: jepa_vs_kepler.html  jepa_vs_kepler_static.html  kepler-encoder-v0-1.md  kepler-v01-technical-post.md  kepler-v01-technical-post_1.html  kepler_encoder_fuser.html  kepler_encoder_fuser_static.html
docs/: v0-model-architecture.md
metrics/: METRICS.md  __init__.py  metrics.py
paper/: .gitignore  build.sh  main.fdb_latexmk  main.tex  references.bib
phase1/: README.md  __init__.py  dataset.py  extract_frames.py  gate.py  make_shards.py  probe_curve.py  train.py  validate.py
pixnerd_integration/: README.md  decode_ur5_128.yaml  decode_ur5_state_128.yaml  latent.py  make_gif.py  robot_latent.py  sample_decode.py
preprocessing/: __init__.py  analyze_cfgs.py  extract_frames.py  gate.py  make_shards.py  make_split.py  precompute_chunks.py  preprocess_all.sh
results/: RESULTS.md
reviewer_runs/: force_only_full.json  force_only_probe.py  run_loro.sh  train_matched.py
scripts/: plot_training_loss.py  train_vision_full.sh  train_vision_head.sh
splits/: holdout_v1.csv  viz_scenes_default.csv
v0.2/: V0.2.md
visualizer/: README.md  server.py
world_tokenizer/: README.md  __init__.py  attn_gif.py  dataloader.py  (+43 more)
(+29 files in other folders)
