[project]
name = "world-encoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=26.1.0",
    "braceexpand>=0.1.7",
    "cattrs>=26.1.0",
    "datasets>=5.0.0",
    "einops>=0.8.2",
    "h5py>=3.16.0",
    "huggingface-hub>=1.21.0",
    "hydra-submitit-launcher>=1.2.0",
    "kornia>=0.8.3",
    "kornia-rs>=0.1.14",
    "lance-namespace>=0.9.0",
    "lance-namespace-urllib3-client>=0.9.0",
    "lightning>=2.6.5",
    "lightning-utilities>=0.15.3",
    "matplotlib>=3.11.0",
    "minari>=0.5.3",
    "numpy>=2.5.0",
    "opt-einsum>=3.4.0",
    "pillow>=12.3.0",
    "pylance>=4.0.0",
    "pytorch-lightning>=2.6.5",
    "requests-cache>=1.3.2",
    "richuru>=0.1.1",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "stable-pretraining>=0.1.7",
    "submitit>=1.5.4",
    "timm>=1.0.27",
    "torch>=2.12.1",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.1",
    "transforms3d>=0.4.2",
    "url-normalize>=3.0.0",
    "webdataset>=1.0.2",
]
